<resources>
    <string name="app_name">Nation Restaurant App</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="restaurant_application">Restaurant Application</string>
    <string name="_50_off">50% Off</string>
    <string name="great_daily_deals">Great Daily Deals</string>
    <string name="promotional_codes">Promotional Codes…</string>
    <string name="coupon_deals">Coupon Deals…</string>
    <string name="action_settings">Settings</string>
    <string name="enter">Enter</string>
    <string name="nation_restaurant_app">Nation Restaurant App</string>
    <string name="menu_items">Menu items</string>
    <string name="menu">Menu</string>
    <string name="drinks">Drinks</string>
    <string name="hamburgers">Hamburgers</string>
    <string name="hamburgers_and_sandwiches">Hamburgers and Sandwiches</string>
    <string name="bacon_burger">bacon_burger</string>
    <string name="cheese_burger">cheese_burger</string>
    <string name="blury_bar">blury_bar</string>
    <string name="house_burger">house_burger</string>
    <string name="reuben_sandwich">reuben_sandwich</string>
    <string name="club_sandwich">club_sandwich</string>
    <string name="chicken_sandwich">chicken_sandwich</string>
    <string name="blt_sandwich">blt_sandwich</string>
    <string name="order_now">Order Now</string>
    <string name="bacon_cheese_burger_1_4_lb_burger_served_on_a_buttery_kaiser_roll_with_american_cheese_and_topped_with_crispy_bacon_calories_595_per_serving_9_45"><![CDATA[Bacon Cheese Burger &#188; lb. burger served on a buttery Kaiser roll with American cheese and topped with crispy bacon. Calories 595 per serving - $9.45]]></string>
    <string name="cheese_burger_1_4_lb_burger_served_on_a_buttery_kaiser_roll_with_american_cheese_dressed_the_way_you_like_it_calories_531_per_serving_8_45"><![CDATA[Cheese Burger &#188; lb. burger served on a buttery Kaiser roll with American cheese dressed the way you like it. Calories 531 per serving - $8.45]]></string>
    <string name="the_house_burger_1_5_lb_burger_served_on_a_buttery_kaiser_roll_with_two_slices_of_crispy_bacon_pepper_jack_cheese_on_a_bed_of_fried_crisp_onions_calories_610_per_serving_11_45">The House Burger 1/5 lb. burger served on a buttery Kaiser roll with two slices of crispy bacon, pepper jack cheese, on a bed of fried crisp onions. Calories 610 per serving - $ 11.45</string>
    <string name="blt_sandwich_served_on_freshly_baked_toasted_bread_four_slices_of_crispy_bacon_fresh_lettuce_and_tomatos_with_your_choice_of_condiments_calories_343_1_sandwich_serving_size_3_99">BLT Sandwich Served on freshly baked toasted bread, four slices of crispy bacon, fresh lettuce and tomatoes with your choice of condiments. Calories 343 1 sandwich serving size - $3.99</string>
    <string name="chicken_sandwich_a_crispy_boneless_chicken_breast_served_the_way_you_like_it_with_your_choice_of_condiments_calories_440_4_25">Chicken Sandwich A crispy boneless chicken breast served the way you like it with your choice of condiments. Calories 440 - $4.25</string>
    <string name="club_sandwich_served_with_your_choice_of_black_forest_ham_turkey_roast_beef_or_chicken_breast_topped_with_bacon_lettuce_tomatoes_and_mayo_on_toasted_bread_calories_395_4_30">Club Sandwich Served with your choice of Black Forest ham, turkey, Roast beef or Chicken breast, topped with Bacon, Lettuce, Tomatoes and mayo on toasted bread. Calories 395 - $4.30</string>
    <string name="reuben_sandwich_marbled_rye_bread_filled_with_freshly_sliced_corned_beef_melty_swiss_cheese_tangy_sauerkraut_and_creamy_thousand_island_dressing_calories_680_5_25">Reuben Sandwich Marbled rye bread filled with freshly sliced corned beef, melty Swiss Cheese, tangy sauerkraut and creamy Thousand island dressing. Calories 680 - $5.25</string>
    <string name="coca_cola_sprite_fanta_orange_dr_pepper_ice_tea_sweet_tea_water_apple_juice">Coca-Cola, Sprite, Fanta Orange, Hi-C, Bargs Rootbeer, Dr. Pepper, Ice Tea, Sweet Tea, Water, Apple Juice - $2.00 (for large) $1.50 (for medium) Small (kids free)</string>
    <string name="orders">Orders</string>
    <string name="sandwich">Sandwich</string>
    <string name="hamburger">Hamburger</string>
    <string name="place_your_order">Place Your Order</string>
    <string name="what_will_it_be">What will it be?</string>
    <string name="click_to_order">Click to order</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="hamburgers_and_sandwiches_order">Hamburgers and Sandwiches Order</string>
    <string name="bacon_cheese_burger">Bacon Cheese Burger</string>
    <string name="cheese_burger_">Cheese Burger</string>
    <string name="the_house_burger">The House Burger</string>
    <string name="fries_included_with_order">Fries included with order</string>
    <string name="reuben_sandwich_">Reuben Sandwich</string>
    <string name="chicken_sandwich_">Chicken Sandwich</string>
    <string name="blt_sandwich_">BLT Sandwich</string>
    <string name="club_sandwich_">Club Sandwich</string>
    <string name="beverages_order">Beverages Order</string>
    <string name="small_drink">Small Drink</string>
    <string name="medium_drink">Medium Drink</string>
    <string name="large_drink">Large drink</string>
    <string name="coca_cola">Coca-Cola</string>
    <string name="sprite">Sprite</string>
    <string name="fanta_orange">Fanta Orange</string>
    <string name="hi_c">Hi-C</string>
    <string name="bargs_rootbeer">Bargs Rootbeer</string>
    <string name="ice_tea">Ice Tea</string>
    <string name="sweet_tea">Sweet Tea</string>
    <string name="apple_juice">Apple Juice</string>
    <string name="water">Water</string>
    <string name="purchase_total">Purchase Total</string>
    <string name="submit_order">Submit</string>
    <string name="receipt">Receipt</string>
    <string name="burgerBacon"> Bacon Cheese Burger $9.45</string>
    <string name="burgerCheese">Cheese Burger $8.45</string>
    <string name="burgerHouse">The House Burger $11.45</string>
    <string name="sandClub">Club Sandwich $4.30</string>
    <string name="sandBLT">B.L.T Sandwich $3.99</string>
    <string name="sandChicken">Chicken Sandwich $4.25</string>
    <string name="sandReuben">Reuben sandwich $5.25</string>
    <string name="sodaCola">Coca-Cola $2.00</string>
    <string name="sodaSprite">Sprite $2.00</string>
    <string name="sodaFanta">Fanta Orange $2.00</string>
    <string name="sodaHi">Hi-C $2.00</string>
    <string name="sodaBargs">Bargs Rootbeer $2.00</string>
    <string name="tea">Sweet-Tea $2.00</string>
    <string name="teaIce">Ice-Tea $2.00</string>
    <string name="juice">Apple Juice $1.25</string>
    <string name="water_">Water free</string>
    <string name="kidsFree">Free</string>
    <string name="sodaMedium">Medium Drink</string>
    <string name="sodaLarge">Large Drink</string>
    <string name="order_here">Order Here</string>
    <string name="total_purchase">Total Purchase</string>
    <string name="order_now_">Order Now!</string>
    <string name="kids_small_drinks_are_free">Kids Small Drinks Are FREE</string>
    <string name="update">Update</string>
    <string name="title_activity_maps">Map</string>
    <string name="locations">Locations</string>
    <string name="back">back</string>
    <string name="coupon_deals_">Coupon Deals</string>
    <string name="deals">Deals</string>
    <string name="promo_codes">Promo Codes</string>
    <string name="view_order">View Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="purchase">Purchase</string>
    <string name="thanks">Thanks!</string>
    <string name="reservation_form">Reservation Form</string>
    <string name="please_fill_the_form_accurately_to_serve_you_better">Please fill the form accurately to serve you better!</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="number_of_guest">Number of Guest</string>
    <string name="name">Name</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="reservation">Reservation</string>
    <string name="time">Time</string>
    <string name="reserved_date">Reserved Date</string>
    <string name="promotional_codes_">Promotional Codes</string>
    <string name="_10_off_with_promo_code_168">$10 Off with Promo Code #168</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="turn_on">Turn On</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="turn_off">Turn off</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="make_visible">Make Visible</string>
    <string name="reserve">Reserve</string>
    <string name="view_reservation">View Reservation</string>
    <string name="cancel_reservation">Cancel</string>


</resources>